sprite saida de texto

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 
 *.xcscheme
 
+
+ProjetoFinal.xcodeproj/project.xcworkspace/xcuserdata/felipe.cnascimento.xcuserdatad/UserInterfaceState.xcuserstate
