--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 
 
 ProjetoFinal.xcodeproj/project.xcworkspace/xcuserdata/felipe.cnascimento.xcuserdatad/UserInterfaceState.xcuserstate
+
+ProjetoFinal.xcodeproj/project.xcworkspace/xcuserdata/felipe.cnascimento.xcuserdatad/UserInterfaceState.xcuserstate
