--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 ProjetoFinal.xcodeproj/project.xcworkspace/xcuserdata/felipe.cnascimento.xcuserdatad/UserInterfaceState.xcuserstate
 
 ProjetoFinal.xcodeproj/project.xcworkspace/xcuserdata/felipe.cnascimento.xcuserdatad/UserInterfaceState.xcuserstate
+
+ProjetoFinal.xcodeproj/project.pbxproj
+
+ProjetoFinal.xcodeproj/project.pbxproj
+
+ProjetoFinal.xcodeproj/project.pbxproj
