--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ ProjetoFinal.xcodeproj/project.pbxproj
 ProjetoFinal.xcodeproj/project.pbxproj
 
 ProjetoFinal.xcodeproj/xcuserdata/rafaellfreitas.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+ProjetoFinal.xcodeproj/xcuserdata/rafaellfreitas.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
